--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  },
+  "devDependencies": {},
   "scripts": {
     "start": "node src/index.js"
   },
@@ -16,8 +20,5 @@
   "bugs": {
     "url": "https://github.com/smeea-2018/employee-tracker-hw/issues"
   },
-  "homepage": "https://github.com/smeea-2018/employee-tracker-hw#readme",
-  "dependencies": {
-    "inquirer": "^9.0.0"
-  }
+  "homepage": "https://github.com/smeea-2018/employee-tracker-hw#readme"
 }
